# Blue-Star

./: .env.example  .gitignore  README.md  app.js  freepay.js  gls.js  hardhat.config.js  index.html  package-lock.json  package.json  pyproject.toml  qr.js  server.js  style.css
.github/workflows/: deploy.yml  main.yml
__tests__/: freepay.test.js  gls.test.js  server.test.js
backend/: main.py  requirements.txt
contracts/: QRStore.sol
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: freepay.js.html  gls.js.html  index.html  qr.js.html  server.js.html
db/: schema.sql
docs/: architecture.md  projects.md
public/: index.html  store.js  style.css
quantum_economics/: __init__.py  ledger.py  market.py  optimizer.py  transaction.py
scripts/: deploy.js
src/: App.css  App.tsx  README.md  SolanaWalletProvider.tsx  index.css  index.js
src/agents/: claudeAgent.js  workflowAgent.js
src/api/: app.js
src/api/middleware/: errorHandler.js
src/api/routes/: agent.js  contracts.js  economic.js  qrstore.js
src/contracts/: CreditSystem.sol  GLSLogistics.sol  QRStore.sol
src/services/: contractService.js  economicService.js  glsService.js
test/: QRStore.test.js
tests/: api.test.js  test_quantum_economics.py
